--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -28,7 +28,7 @@
     <hr>
     <!-- decrypt to encrypt textboxes -->
     <textarea id="PLAINTEXT" placeholder="message to encrypt"></textarea>
-    <textarea id="CIPHERTEXT" placeholder="encrypted message" readonly></textarea>
+    <textarea id="CIPHERTEXT" placeholder="encrypted message" readonly></textarea><br>
     <!-- encrypt to decrypt textboxes -->
     <textarea id="ENCRYPTED" placeholder="message to decrypt"></textarea>
     <textarea id="DECRYPTED" placeholder="decrypted message"></textarea>
