--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -5,8 +5,9 @@
 
 
 <!-- TODOs
-* finish Javascript encrypt/decrypt functions
-* beautify
+- finish Javascript encrypt/decrypt functions
+- beautify
+  - add label for password
 -->
 
 <!DOCTYPE html>
