--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -22,7 +22,7 @@
     <meta name="description" content="Securely encrypts and decrypts a message right in the user's browser.">
   </head>
   <body>
-    <label>Password</label><input type="password" id="PASSKEY" placeholder="password"><br>
+    <label>Password: </label><input type="password" id="PASSKEY" placeholder="password"><br>
     <button onclick="ENCRYPTING()">Encrypt</button>
     <button onclick="DECRYPTING()">Decrypt</button><br>
     <button onclick="CLEAR()">Clear</button><br>
