Updated TV listing
* added updated index to TV page

--- a/tv/index.html
+++ b/tv/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TV - 28 MAR 19</title>
+    <title>TV - 20 JUN 19</title>
     <!--<link rel="stylesheet" href="">-->
 </head>
 
@@ -14,13 +14,13 @@
 
     <main>
     <pre>
-    28 MAR 19
+    20 JUN 19
     
     
- Volume in drive E is FLEIJA
+ Volume in drive F is FLEIJA
  Volume Serial Number is 2A7E-CB8B
 
- Directory of E:\.dat
+ Directory of F:\.dat
 
 _index_command.txt
 _index~17Aug14.txt
@@ -39,6 +39,7 @@ _index~18Jul06.txt
 _index~18May18.txt
 _index~18May29.txt
 _index~18Nov10.txt
+_index~19Mar28.txt
 50 First Dates (2004) [1080p].mp4
 A Bugs Life (1998).mp4
 A Walk to Remember (2002) [1080p].mp4
@@ -57,6 +58,8 @@ Armageddon (1998) [720p].mkv
 [Arrow S02]
 [Arrow S03]
 [Arrow S04]
+[Arrow S05]
+[Arrow S06]
 Atlantis (2001).avi
 Avengers (2012) [1080p].mp4
 Avengers- Age of Ultron (2015) [1080p].mp4
@@ -67,12 +70,12 @@ Avengers- Infinity War (2018) [720p].mkv
 [Ballers S04]
 Batman Begins (2005) [720p].mkv
 Batman- The Dark Knight (2008) [720p].mkv
-[Batman v Superman- Dawn of Justice EXTENDED (2016) [1080p]]
+Batman v Superman- Dawn of Justice EXTENDED (2016) [1080p].mkv
 Beauty and the Beast (1991).avi
 Beauty and the Beast (2017) [1080p].mp4
 Bee Movie (2007).mkv
 Big Hero 6 (2014) [720p].mp4
-[Black Panther (2018) [1080p]]
+Black Panther (2018) [1080p].mp4
 [BN S01]
 [BN S02]
 [BN S03]
@@ -88,11 +91,11 @@ Captain America- First Avenger (2011) [720p].mkv
 Captain America- The Winter Soldier (2014) [1080p].mp4
 Central Intelligence (2016).avi
 [CG]
+Cheaper By The Dozen 2 (2005) [1080p].mp4
 Cinderella (2015) [1080p].mp4
 Clash of the Titans (2010) [720p].mkv
 Cool Runnings (1993) [1080p].mp4
 Corpse Bride (2005) [720p].mp4
-Crazy Stupid Love (2011) [720p].mp4
 [DB]
 Despicable Me (2010) [1080p].mp4
 Divergent (2014) [720p].mp4
@@ -114,6 +117,7 @@ Eagle Eye (2008) [720p].mp4
 [Elementary S04]
 [Elementary S05]
 [Elementary S06]
+[Emilee's]
 Enchanted (2007) [1080p].mp4
 Entrapment (1999) [720p].mkv
 Fantastic Beasts and Where to Find Them (2016) [1080p].mp4
@@ -135,6 +139,13 @@ G.I. Joe- Retaliation (2013) [1080p].mp4
 G.I. Joe- Rise of Cobra (2009) [1080p].mp4
 Gnomeo and Juliet (2011) [720p].mkv
 Gods of Egypt (2016) [720p] {Dual Audio}.mkv
+[GoT S1]
+[GoT S2]
+[GoT S3]
+[GoT S4]
+[GoT S5]
+[GoT S6]
+[GoT S7]
 Groundhog Day (1993) [720p].mp4
 Guardians of the Galaxy (2014) [1080p].mkv
 Guardians of the Galaxy Vol. 2 (2017) [1080p].mp4
@@ -186,7 +197,7 @@ Iron Man (2008).avi
 Iron Man 2 (2010).avi
 Iron Man 3 (2013) [1080p].mp4
 Jack Reacher (2012) [1080p].mp4
-[Jack Ryan Shadow Recruit (2014) [1080p]]
+Jack Ryan Shadow Recruit (2014) [1080p].mp4
 Journey to the Center of the Earth (2008) [1080p].mp4
 Jumanji Welcome to the Jungle (2017) [1080p].mp4
 Jurassic World- Fallen Kingdom (2018) [720p].mp4
@@ -234,6 +245,7 @@ Now You See Me (2013) [1080p].mp4
 Now You See Me 2 (2016) [1080p].mkv
 Oceans Eight (2018) [720p].mkv
 [Once Upon A Time S01]
+[Once Upon A Time S02]
 Oscar (1991) [720p].mp4
 Pacific Rim (2013) [720p].mp4
 Penguins of Madagascar (2014) [1080p].mp4
@@ -253,6 +265,7 @@ Prince of Persia- Sands of Time (2010).avi
 [Psych S04]
 [Psych S05]
 [Psych S07]
+Push (2009) [1080p].mp4
 Quest For Camelot (1998).avi
 Ready Player One (2018) [1080p].mp4
 Real Steel (2011) [1080p].mkv
@@ -282,7 +295,6 @@ Spider-man (2002).avi
 Spider-man 2 (2004).avi
 Spider-man 3 (2007).avi
 Spider-Man Homecoming (2017) [1080p].mp4
-Star Wars- The Force Awakens (2015) [1080p] English.srt
 Star Wars- The Force Awakens (2015) [1080p].mkv
 Star Wars- The Last Jedi (2017) [1080p].mkv
 Stardust (2007) [1080p].mp4
@@ -292,8 +304,8 @@ Stealth (2005) [720p].mkv
 Support Your Local Sheriff (1969) [720p].mp4
 Tangled (2010) [1080p].mp4
 Tarzan (1999) [1080p].mp4
-[The A Team EXTENDED (2010)]
 The Addams Family (1991) [720p].mp4
+The A-Team EXTENDED (2010) [720p].mp4
 [The Big Bang Theory S01]
 [The Big Bang Theory S02]
 [The Big Bang Theory S03]
@@ -318,8 +330,8 @@ The Kid (2000).avi
 The Legend of Tarzan (2016).avi
 The Lego Movie (2014).mp4
 The Lion King (1994) [720p].mkv
-[The Magnificent Seven (2016) [1080p]]
-[The Man from U.N.C.L.E. (2015) [1080p]]
+The Magnificent Seven (2016) [1080p].mp4
+The Man from U.N.C.L.E. (2015) [1080p].mkv
 The Mummy (1999) [1080p].mp4
 The Mummy (2017) [1080p].mp4
 The Mummy Returns (2001) [1080p].mp4
@@ -348,6 +360,7 @@ The Terminator (1984) [1080p].mp4
 Thor (2011) [1080p].mp4
 Thor- Dark World (2013) [720p].mkv
 Thor Ragnarok (2017) [1080p].mkv
+Titanic (1997) [720p].mp4
 Tomb Raider (2001) [720p].mkv
 Tomb Raider- The Cradle of Life (2003).mkv
 Total Recall EXTENDED (2012) [720p].mp4
@@ -358,14 +371,12 @@ Tron Legacy (2010) [1080p].mp4
 TV_quality_check.txt
 [Under The Dome S01]
 [Under the Dome S03]
-Valentine's Day (2010) [1080p].mp4
 Venom (2018) [720p].avi
 [Vikings S01]
 WALL-E (2008) [1080p].mp4
 War For the Planet of the Apes (2017) [1080p].mp4
 [Westworld S01]
 [Westworld S02]
-When Sparks Fly (2014) [720p].mp4
 White Chicks (2004) [1080p].mp4
 White House Down (2013) [720p].mkv
 Wonder Woman (2017) [1080p].mp4
@@ -379,8 +390,8 @@ X-Men First Class (2011) [720p].mp4
 X-Men Origins Wolverine (2009) [1080p].mp4
 X-Men The Last Stand (2006) [1080p].mp4
 Zootopia (2016) [1080p].mp4
-             247 File(s) 349,725,912,469 bytes
-             110 Dir(s)  2,786,433,433,600 bytes free
+             253 File(s) 365,906,359,412 bytes
+             115 Dir(s)  2,746,243,612,672 bytes free
    </pre>
     </main>
 
