Updated TV index listing
25 JUL 2019

--- a/tv/index.html
+++ b/tv/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TV - 20 JUN 19</title>
+    <title>TV - 25 JUL 19</title>
     <!--<link rel="stylesheet" href="">-->
 </head>
 
@@ -14,7 +14,7 @@
 
     <main>
     <pre>
-    20 JUN 19
+    25 JUL 19
     
     
  Volume in drive F is FLEIJA
@@ -39,6 +39,7 @@ _index~18Jul06.txt
 _index~18May18.txt
 _index~18May29.txt
 _index~18Nov10.txt
+_index~19Jun20.txt
 _index~19Mar28.txt
 50 First Dates (2004) [1080p].mp4
 A Bugs Life (1998).mp4
@@ -146,7 +147,9 @@ Gods of Egypt (2016) [720p] {Dual Audio}.mkv
 [GoT S5]
 [GoT S6]
 [GoT S7]
+[GoT S8]
 Groundhog Day (1993) [720p].mp4
+Grown Ups (2010) [720p].mp4
 Guardians of the Galaxy (2014) [1080p].mkv
 Guardians of the Galaxy Vol. 2 (2017) [1080p].mp4
 [H50 S01]
@@ -184,6 +187,7 @@ Huntsman- Winters War (2016).avi
 I am Legend (2007) [720p].mkv
 I Robot (2004) [720p].mkv
 I, Frankenstein (2014) [720p].mp4
+Ice Age (2002) [1080p].mp4
 Inception (2010).avi
 Incredibles (2004) [720p].mkv
 Independance Day (1996) [720p].avi
@@ -215,6 +219,8 @@ Limitless (2011) [1080p].mp4
 Lord of the Rings- The Fellowship of the Ring EXTENDED (2001) [720p].mp4
 Lord of the Rings- The Return of the King EXTENDED (2003) [1080p].mp4
 Lord of the Rings- The Two Towers EXTENDED (2002) [1080p].mp4
+[Lucifer S01]
+[Lucifer S02]
 Madagascar (2005) [1080p].mp4
 Maleficent (2014) [1080p].mp4
 Mamma Mia! Here We Go Again (2018) [1080p].mp4
@@ -282,6 +288,7 @@ Shakespeare In Love (1998) [720p].mkv
 [Shannara S01]
 [Shannara S02]
 Shark Tale (2004).avi
+Shazam! (2019) [1080p].mkv
 [Sherlock S01]
 [Sherlock S02]
 [Sherlock S03]
@@ -301,6 +308,7 @@ Stardust (2007) [1080p].mp4
 Stealth (2005) [720p].mkv
 [Stranger Things S01]
 [Stranger Things S02]
+[Stranger Things S03]
 Support Your Local Sheriff (1969) [720p].mp4
 Tangled (2010) [1080p].mp4
 Tarzan (1999) [1080p].mp4
@@ -321,12 +329,22 @@ The Dark Knight Rises (2012) [1080p].m4v
 The Dark Tower (2017) [1080p].mp4
 The Darkest Hour (2017) [720p].avi
 The Fate of the Furious (2017) [1080p].mp4
+[The Flash S01]
 The Forbidden Kingdom (2008).avi
 The Greatest Showman (2017) [1080p].mp4
 The Hunchback of Notre Dame (1996) [720p].mp4
 The Jazz Singer (1980).mp4
 The Jungle Book (2016) [720p].mp4
 The Kid (2000).avi
+[The King of Queens S01]
+[The King of Queens S02]
+[The King of Queens S03]
+[The King of Queens S04]
+[The King of Queens S05]
+[The King of Queens S06]
+[The King of Queens S07]
+[The King of Queens S08]
+[The King of Queens S09]
 The Legend of Tarzan (2016).avi
 The Lego Movie (2014).mp4
 The Lion King (1994) [720p].mkv
@@ -390,8 +408,8 @@ X-Men First Class (2011) [720p].mp4
 X-Men Origins Wolverine (2009) [1080p].mp4
 X-Men The Last Stand (2006) [1080p].mp4
 Zootopia (2016) [1080p].mp4
-             253 File(s) 365,906,359,412 bytes
-             115 Dir(s)  2,746,243,612,672 bytes free
+             257 File(s) 369,963,605,975 bytes
+             129 Dir(s)  2,694,374,752,256 bytes free
    </pre>
     </main>
 
