Updated main TV listing

--- a/tv/index.html
+++ b/tv/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TV - 25 JUL 19</title>
+    <title>TV - 13 AUG 19</title>
     <!--<link rel="stylesheet" href="">-->
 </head>
 
@@ -14,13 +14,13 @@
 
     <main>
     <pre>
-    25 JUL 19
+    13 AUG 19
     
     
- Volume in drive F is FLEIJA
+ Volume in drive E is FLEIJA
  Volume Serial Number is 2A7E-CB8B
 
- Directory of F:\.dat
+ Directory of E:\.dat
 
 _index_command.txt
 _index~17Aug14.txt
@@ -39,6 +39,7 @@ _index~18Jul06.txt
 _index~18May18.txt
 _index~18May29.txt
 _index~18Nov10.txt
+_index~19Jul25.txt
 _index~19Jun20.txt
 _index~19Mar28.txt
 50 First Dates (2004) [1080p].mp4
@@ -50,6 +51,7 @@ A Wrinkle In Time (2018) [720p].mp4
 [Agents of S.H.I.E.L.D. S03]
 [Agents of S.H.I.E.L.D. S04]
 [Agents of S.H.I.E.L.D. S05]
+[Agents of S.H.I.E.L.D. S06]
 Aladdin (1992) [1080p].mkv
 American Sniper (2014) [1080p].mp4
 Angels and Demons (2009) [720p].mkv
@@ -61,6 +63,7 @@ Armageddon (1998) [720p].mkv
 [Arrow S04]
 [Arrow S05]
 [Arrow S06]
+[Arrow S07]
 Atlantis (2001).avi
 Avengers (2012) [1080p].mp4
 Avengers- Age of Ultron (2015) [1080p].mp4
@@ -165,6 +168,7 @@ Harry Potter IV - The Goblet of Fire (2005) [720p].mkv
 Harry Potter V - The Order of the Pheonix (2007) [720p].mkv
 Harry Potter VI - The Half Blood Prince (2009) [720p].mkv
 Harry Potter VII - Deathly Hallows Part I (2010) [720p].mkv
+Harry Potter VIII - Deathly Hallows Part 2 (2011) [1080p].mp4
 Hatari! (1962) [1080p].mp4
 Hercules (1997) [720p].mp4
 Hercules (2014) [1080p].mp4
@@ -221,6 +225,8 @@ Lord of the Rings- The Return of the King EXTENDED (2003) [1080p].mp4
 Lord of the Rings- The Two Towers EXTENDED (2002) [1080p].mp4
 [Lucifer S01]
 [Lucifer S02]
+[Lucifer S03]
+[Lucifer S04]
 Madagascar (2005) [1080p].mp4
 Maleficent (2014) [1080p].mp4
 Mamma Mia! Here We Go Again (2018) [1080p].mp4
@@ -234,6 +240,8 @@ Moana (2016) [1080p].mkv
 Monster University (2013) [720p].mkv
 Monsters Inc. (2001) [1080p].mp4
 Mr. and Mrs. Smith (2005) [720p].mp4
+[Mr. Robot S01]
+[Mr. Robot S02]
 Muppet Treasure Island (1996) [720p].mp4
 Music and Lyrics (2007) [720p].mp4
 My Fair Lady (1964) [1080p].mp4
@@ -330,8 +338,11 @@ The Dark Tower (2017) [1080p].mp4
 The Darkest Hour (2017) [720p].avi
 The Fate of the Furious (2017) [1080p].mp4
 [The Flash S01]
+[The Flash S02]
+[The Flash S03]
 The Forbidden Kingdom (2008).avi
 The Greatest Showman (2017) [1080p].mp4
+The House With A Clock In Its Walls (2018) [1080p].mp4
 The Hunchback of Notre Dame (1996) [720p].mp4
 The Jazz Singer (1980).mp4
 The Jungle Book (2016) [720p].mp4
@@ -375,6 +386,7 @@ The Terminal (2004) [1080p].mp4
 The Terminator (1984) [1080p].mp4
 [This Is Us S01]
 [This is Us S02]
+[This Is Us S03]
 Thor (2011) [1080p].mp4
 Thor- Dark World (2013) [720p].mkv
 Thor Ragnarok (2017) [1080p].mkv
@@ -408,8 +420,8 @@ X-Men First Class (2011) [720p].mp4
 X-Men Origins Wolverine (2009) [1080p].mp4
 X-Men The Last Stand (2006) [1080p].mp4
 Zootopia (2016) [1080p].mp4
-             257 File(s) 369,963,605,975 bytes
-             129 Dir(s)  2,694,374,752,256 bytes free
+             260 File(s) 373,602,514,523 bytes
+             138 Dir(s)  2,615,178,952,704 bytes free
    </pre>
     </main>
 
