Updated TV indexes
* index
* ems/index

--- a/tv/index.html
+++ b/tv/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TV - 13 AUG 19</title>
+    <title>TV - 24 SEP 19</title>
     <!--<link rel="stylesheet" href="">-->
 </head>
 
@@ -14,7 +14,7 @@
 
     <main>
     <pre>
-    13 AUG 19
+    24 SEP 19
     
     
  Volume in drive E is FLEIJA
@@ -39,6 +39,7 @@ _index~18Jul06.txt
 _index~18May18.txt
 _index~18May29.txt
 _index~18Nov10.txt
+_index~19Aug13.txt
 _index~19Jul25.txt
 _index~19Jun20.txt
 _index~19Mar28.txt
@@ -53,9 +54,12 @@ A Wrinkle In Time (2018) [720p].mp4
 [Agents of S.H.I.E.L.D. S05]
 [Agents of S.H.I.E.L.D. S06]
 Aladdin (1992) [1080p].mkv
+Aladdin (2019) [720p].mp4
+Alice In Wonderland (2010) [1080p].mp4
 American Sniper (2014) [1080p].mp4
 Angels and Demons (2009) [720p].mkv
 Ant-Man (2015) [1080p].mp4
+Aquaman (2018) [1080p].mp4
 Armageddon (1998) [720p].mkv
 [Arrow S01]
 [Arrow S02]
@@ -67,6 +71,7 @@ Armageddon (1998) [720p].mkv
 Atlantis (2001).avi
 Avengers (2012) [1080p].mp4
 Avengers- Age of Ultron (2015) [1080p].mp4
+Avengers- Endgame (2019) [1080p].mkv
 Avengers- Infinity War (2018) [720p].mkv
 [Ballers S01]
 [Ballers S02]
@@ -80,6 +85,7 @@ Beauty and the Beast (2017) [1080p].mp4
 Bee Movie (2007).mkv
 Big Hero 6 (2014) [720p].mp4
 Black Panther (2018) [1080p].mp4
+Blast from the Past (1999) [720p].mp4
 [BN S01]
 [BN S02]
 [BN S03]
@@ -88,11 +94,23 @@ Black Panther (2018) [1080p].mp4
 [BN S06]
 [BN S07]
 Bolt (2008).avi
+[Bones S01]
+[Bones S02]
+[Bones S03]
+[Bones S04]
+[Bones S05]
+[Bones S06]
+[Bones S07]
+[Bones S08]
 Brave (2012) [1080p].mp4
 [Brooklyn Nine Nine S01]
+[Brooklyn Nine Nine S02]
+[Brooklyn Nine Nine S04]
+Bumblebee (2018) [720p].mp4
 Captain America- Civil War (2016) [1080p].mp4
 Captain America- First Avenger (2011) [720p].mkv
 Captain America- The Winter Soldier (2014) [1080p].mp4
+Captain Marvel (2019) [1080p].mp4
 Central Intelligence (2016).avi
 [CG]
 Cheaper By The Dozen 2 (2005) [1080p].mp4
@@ -121,10 +139,12 @@ Eagle Eye (2008) [720p].mp4
 [Elementary S04]
 [Elementary S05]
 [Elementary S06]
+[Elementary S07]
 [Emilee's]
-Enchanted (2007) [1080p].mp4
+Enchanted (2007) [720p].mp4
 Entrapment (1999) [720p].mkv
 Fantastic Beasts and Where to Find Them (2016) [1080p].mp4
+Fantastic Beasts- The Crimes of Grindelwald (2018) [1080p].mkv
 Fast and Furious 1 (2001) [1080p].mp4
 Fast and Furious 2 (2003) [1080p].mp4
 Fast and Furious 3 (2006) [720p].mp4
@@ -138,9 +158,14 @@ Flatliners (2017) [1080p].mp4
 Footloose (1984) [720p].mkv
 [FP-BA S01]
 [FP-BA S02]
+[FP-BA S03]
+[FP-BA S04]
+[FP-BA S05]
+[FP-BA S06]
 Frozen (2013) [1080p].mp4
 G.I. Joe- Retaliation (2013) [1080p].mp4
 G.I. Joe- Rise of Cobra (2009) [1080p].mp4
+Geostorm (2017) [720p].mp4
 Gnomeo and Juliet (2011) [720p].mkv
 Gods of Egypt (2016) [720p] {Dual Audio}.mkv
 [GoT S1]
@@ -151,8 +176,18 @@ Gods of Egypt (2016) [720p] {Dual Audio}.mkv
 [GoT S6]
 [GoT S7]
 [GoT S8]
+[Grey's Anatomy S01]
+[Grey's Anatomy S02]
+[Grey's Anatomy S03]
+[Grey's Anatomy S04]
+[Grey's Anatomy S05]
+[Grey's Anatomy S06]
+[Grey's Anatomy S07]
+[Grey's Anatomy S08]
+[Grey's Anatomy S09]
 Groundhog Day (1993) [720p].mp4
 Grown Ups (2010) [720p].mp4
+Grown Ups 2 (2013) [720p].mp4
 Guardians of the Galaxy (2014) [1080p].mkv
 Guardians of the Galaxy Vol. 2 (2017) [1080p].mp4
 [H50 S01]
@@ -172,6 +207,7 @@ Harry Potter VIII - Deathly Hallows Part 2 (2011) [1080p].mp4
 Hatari! (1962) [1080p].mp4
 Hercules (1997) [720p].mp4
 Hercules (2014) [1080p].mp4
+Hitch (2005) [720p].mp4
 Hobbit- An Unexpected Journey EXTENDED (2012) [1080p].mp4
 Hobbit- Battle of the Five Armies EXTENDED (2014) [1080p].mkv
 Hobbit- The Desolation of Smaug EXTENDED (2013) [1080p].mp4
@@ -194,6 +230,7 @@ I, Frankenstein (2014) [720p].mp4
 Ice Age (2002) [1080p].mp4
 Inception (2010).avi
 Incredibles (2004) [720p].mkv
+Incredibles 2 (2018) [720p].mp4
 Independance Day (1996) [720p].avi
 Indiana Jones- Kingdom of the Crystal Skull (2008) [720p].mkv
 Indiana Jones- Last Crusade (1989) [720p].mkv
@@ -209,6 +246,7 @@ Jack Ryan Shadow Recruit (2014) [1080p].mp4
 Journey to the Center of the Earth (2008) [1080p].mp4
 Jumanji Welcome to the Jungle (2017) [1080p].mp4
 Jurassic World- Fallen Kingdom (2018) [720p].mp4
+Justice League (2017) [720p].mp4
 Keeping Up with the Joneses (2016).avi
 King Arthur Legend of the Sword (2017) [1080p].mp4
 Kung Fu Panda (2008).mkv
@@ -233,10 +271,19 @@ Mamma Mia! Here We Go Again (2018) [1080p].mp4
 McLintock (1963).mp4
 Meet the Robinsons (2007) [1080p].mp4
 Megamind (2010) [720p].mp4
+Minority Report (2002) [720p].mp4
 Mission Impossible (1996) [720p].mkv
 Mission Impossible II (2000) [720p].mkv
 Mission Impossible III (2006) [720p].mkv
 Moana (2016) [1080p].mkv
+[Modern Family S01]
+[Modern Family S02]
+[Modern Family S03]
+[Modern Family S04]
+[Modern Family S05]
+[Modern Family S06]
+[Modern Family S07]
+[Modern Family S08]
 Monster University (2013) [720p].mkv
 Monsters Inc. (2001) [1080p].mp4
 Mr. and Mrs. Smith (2005) [720p].mp4
@@ -255,11 +302,17 @@ My Fair Lady (1964) [1080p].mp4
 [NCIS S01]
 [NCIS S02 (incomplete)]
 New Years Eve (2011) [720p].mp4
+Next (2007) [720p].mp4
+Noah (2014) [720p].mp4
 Now You See Me (2013) [1080p].mp4
 Now You See Me 2 (2016) [1080p].mkv
 Oceans Eight (2018) [720p].mkv
-[Once Upon A Time S01]
-[Once Upon A Time S02]
+[Once Upon a Time S01]
+[Once Upon a Time S02]
+[Once Upon a Time S03]
+[Once Upon a Time S04]
+[Once Upon a Time S05]
+[Once Upon a Time S07]
 Oscar (1991) [720p].mp4
 Pacific Rim (2013) [720p].mp4
 Penguins of Madagascar (2014) [1080p].mp4
@@ -268,9 +321,6 @@ Pirates of the Caribbean I- Curse of the Black Pearl (2003) [720p].mkv
 Pirates of the Caribbean II- Dead Mans Chest (2006) [720p].mkv
 Pirates of the Caribbean III- At Worlds End (2007) [720p].mkv
 Pirates of the Caribbean IV- On Stranger Tides (2011) [720p].mkv
-Pitch Perfect (2012) [1080p].mp4
-Pitch Perfect 2 (2015) [720p].mp4
-Pitch Perfect 3 (2017) [1080p].mp4
 [PM]
 Prince of Persia- Sands of Time (2010).avi
 [Psych S01]
@@ -281,6 +331,8 @@ Prince of Persia- Sands of Time (2010).avi
 [Psych S07]
 Push (2009) [1080p].mp4
 Quest For Camelot (1998).avi
+Ralph Breaks the Internet (2018) [720p].mp4
+Rampage (2018) [720p].mp4
 Ready Player One (2018) [1080p].mp4
 Real Steel (2011) [1080p].mkv
 Red (2010) [1080p].mp4
@@ -288,6 +340,7 @@ Red 2 (2013) [720p].mp4
 Remember the Titans (2000) [1080p].mp4
 Rio (2011) [1080p].mp4
 Robin Hood (1973) [480p].mkv
+Robin Hood- Origins (2018) [720p].mp4
 Robots (2005) [720p].mp4
 Rogue One (2016) [1080p].mkv
 Seven Pounds (2008) [1080p].mp4
@@ -317,16 +370,26 @@ Stealth (2005) [720p].mkv
 [Stranger Things S01]
 [Stranger Things S02]
 [Stranger Things S03]
+[Supergirl S01]
 Support Your Local Sheriff (1969) [720p].mp4
 Tangled (2010) [1080p].mp4
 Tarzan (1999) [1080p].mp4
+The 15.17 To Paris (2018) [1080p].mp4
 The Addams Family (1991) [720p].mp4
 The A-Team EXTENDED (2010) [720p].mp4
 [The Big Bang Theory S01]
 [The Big Bang Theory S02]
 [The Big Bang Theory S03]
 [The Big Bang Theory S04]
+[The Big Bang Theory S05]
+[The Big Bang Theory S06]
+[The Big Bang Theory S07]
+[The Big Bang Theory S08]
+[The Big Bang Theory S09]
+[The Big Bang Theory S10]
+[The Big Bang Theory S11]
 [The Big Bang Theory S12]
+The Blind Side (2009) [720p].mp4
 The Boss Baby (2017) [1080p].mkv
 The Bourne Identity (2002).mkv
 The Bourne Supremacy (2004) [720p].mkv
@@ -336,10 +399,14 @@ The Da Vinci Code (2006).avi
 The Dark Knight Rises (2012) [1080p].m4v
 The Dark Tower (2017) [1080p].mp4
 The Darkest Hour (2017) [720p].avi
+The Day After Tomorrow (2004) [720p].mp4
+The Emperors New Groove (2000) [1080p].mp4
 The Fate of the Furious (2017) [1080p].mp4
 [The Flash S01]
 [The Flash S02]
 [The Flash S03]
+[The Flash S04]
+[The Flash S05]
 The Forbidden Kingdom (2008).avi
 The Greatest Showman (2017) [1080p].mp4
 The House With A Clock In Its Walls (2018) [1080p].mp4
@@ -359,12 +426,17 @@ The Kid (2000).avi
 The Legend of Tarzan (2016).avi
 The Lego Movie (2014).mp4
 The Lion King (1994) [720p].mkv
+The Little Mermaid (1989) [1080p].mkv
+The Lone Ranger (2013) [720p].mp4
+The Lorax (2012) [720p].mp4
 The Magnificent Seven (2016) [1080p].mp4
 The Man from U.N.C.L.E. (2015) [1080p].mkv
+The Martian (2015) [720p].mp4
 The Mummy (1999) [1080p].mp4
 The Mummy (2017) [1080p].mp4
 The Mummy Returns (2001) [1080p].mp4
-The Mummy Tomb of The Dragon Emperor (2008) [1080p].mp4
+The Mummy- Tomb of The Dragon Emperor (2008) [1080p].mp4
+The Music Man (1962).avi
 [The Office S01 (incomplete)]
 [The Office S02]
 [The Office S03]
@@ -384,18 +456,25 @@ The Sorcerers Apprentice (2010).avi
 The Sound of Music (1965) [1080p].mp4
 The Terminal (2004) [1080p].mp4
 The Terminator (1984) [1080p].mp4
+The Three Musketeers (1993) [1080p].mp4
+The Three Musketeers (2011) [720p].mp4
 [This Is Us S01]
 [This is Us S02]
 [This Is Us S03]
 Thor (2011) [1080p].mp4
 Thor- Dark World (2013) [720p].mkv
-Thor Ragnarok (2017) [1080p].mkv
+Thor- Ragnarok (2017) [1080p].mkv
 Titanic (1997) [720p].mp4
 Tomb Raider (2001) [720p].mkv
 Tomb Raider- The Cradle of Life (2003).mkv
+Tomorrowland (2015) [720p].mp4
 Total Recall EXTENDED (2012) [720p].mp4
 Tower Heist (2011) [720p].mp4
 Transcendence (2014) [1080p].mkv
+Transformers (2007) [720p].mp4
+Transformers- Age of Extinction (2014) [720p].mp4
+Transformers- Dark of the Moon (2011) [720p].mp4
+Transformers- Revenge of the Fallen (2009) [720p].mp4
 Treasure Planet (2002).avi
 Tron Legacy (2010) [1080p].mp4
 TV_quality_check.txt
@@ -414,14 +493,14 @@ Wrath of the Titans (2012) [1080p].mp4
 Wreck It Ralph (2012) [1080p].mp4
 X-Men (2000) [1080p].mp4
 X-Men 2 (2003) [720p].mp4
-X-Men Apocalypse (2016) [1080p].mkv
+X-Men- Apocalypse (2016) [1080p].mkv
 X-Men- Days of Future Past {The Rogue Cut} (2014) [1080p].mkv
-X-Men First Class (2011) [720p].mp4
-X-Men Origins Wolverine (2009) [1080p].mp4
-X-Men The Last Stand (2006) [1080p].mp4
+X-Men- First Class (2011) [720p].mp4
+X-Men Origins- Wolverine (2009) [1080p].mp4
+X-Men- The Last Stand (2006) [1080p].mp4
 Zootopia (2016) [1080p].mp4
-             260 File(s) 373,602,514,523 bytes
-             138 Dir(s)  2,615,178,952,704 bytes free
+             293 File(s) 413,875,630,305 bytes
+             184 Dir(s)  2,354,095,063,040 bytes free
    </pre>
     </main>
 
