updated TV listing

--- a/tv/index.html
+++ b/tv/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TV - 12 APR 2020</title>
+    <title>TV - 15 JUN 2020</title>
     <!--<link rel="stylesheet" href="">-->
 </head>
 
@@ -14,14 +14,39 @@
 
     <main>
     <pre>
-    12 APR 2020
+    15 JUN 2020
     
     
- Volume in drive F is FLEIJA
+ Volume in drive D is FLEIJA
  Volume Serial Number is 2A7E-CB8B
 
- Directory of F:\.dat
+ Directory of D:\.dat
 
+_index_command.txt
+_index~17Aug14.txt
+_index~17Aug24.txt
+_index~17Jul29.txt
+_index~17Mar01.txt
+_index~17May23.txt
+_index~17Oct22.txt
+_index~17Sep24.txt
+_index~18Apr06.txt
+_index~18Apr22.txt
+_index~18Aug21.txt
+_index~18Dec10.txt
+_index~18Jan11.txt
+_index~18Jul06.txt
+_index~18May18.txt
+_index~18May29.txt
+_index~18Nov10.txt
+_index~19Aug13.txt
+_index~19Jul25.txt
+_index~19Jun20.txt
+_index~19Mar28.txt
+_index~19Sep24.txt
+_index~20Apr12.txt
+_index~20Jan17.txt
+_index~20Mar14.txt
 50 First Dates (2004) [1080p].mp4
 A Bugs Life (1998).mp4
 A Quiet Place (2018).avi
@@ -50,6 +75,7 @@ Armageddon (1998) [720p].mkv
 [Arrow S05]
 [Arrow S06]
 [Arrow S07]
+[Arrow S08]
 Atlantis (2001).avi
 Avengers (2012) [1080p].mp4
 Avengers- Age of Ultron (2015) [1080p].mp4
@@ -143,6 +169,7 @@ Fast and Furious 6 (2013) [1080p].mp4
 Fast and Furious 7 (2015).mp4
 Ferris Buellers Day Off (1986) [1080p].mp4
 Fireproof (2008) [1080p].mp4
+First Knight (1995) [720p].mp4
 Flatliners (2017) [1080p].mp4
 Footloose (1984) [720p].mkv
 Forrest Gump (1994) [720p].mp4
@@ -287,6 +314,7 @@ Moana (2016) [1080p].mkv
 [Modern Family S08]
 [Modern Family S09]
 [Modern Family S10]
+[Modern Family S11]
 Monster University (2013) [720p].mkv
 Monsters Inc. (2001) [1080p].mp4
 Mr. and Mrs. Smith (2005) [720p].mp4
@@ -307,6 +335,7 @@ My Fair Lady (1964) [1080p].mp4
 [New Girl S01]
 [New Girl S02]
 [New Girl S03]
+[New Girl S04]
 [New Girl S05]
 [New Girl S07 (incomplete)]
 New Years Eve (2011) [720p].mp4
@@ -383,10 +412,6 @@ Stealth (2005) [720p].mkv
 [Stranger Things S01]
 [Stranger Things S02]
 [Stranger Things S03]
-[Supergirl S01]
-[Supergirl S02]
-[Supergirl S03]
-[Supergirl S04]
 Support Your Local Sheriff (1969) [720p].mp4
 Tangled (2010) [1080p].mp4
 Tarzan (1999) [1080p].mp4
@@ -524,8 +549,8 @@ X-Men Origins- Wolverine (2009) [1080p].mp4
 X-Men- The Last Stand (2006) [1080p].mp4
 You've Got Mail (1998) [720p].mp4
 Zootopia (2016) [1080p].mp4
-             318 File(s) 439,237,758,432 bytes
-             208 Dir(s)  2,109,691,920,384 bytes free
+             320 File(s) 440,432,841,689 bytes
+             207 Dir(s)  2,140,565,143,552 bytes free
    </pre>
     </main>
 
