--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -31,6 +31,9 @@
             <img src="images\contact\001-pin.png"       alt="Work location">
             <img src="images\contact\006-web.png"       alt="Website">
         </div>
+        <div class="addme">
+            <img src="images\contact\005-add-contact.png"   alt="Add contact">
+        </div>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
         <script src="//code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
         <script src="//code.jquery.com/ui/1.13.0/jquery-ui.min.js" type="text/javascript"></script>
