--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -25,14 +25,26 @@
             <h1 class="">Dallin Snell</h1>
         </div>
         <div class="contactme">
-            <img src="images\contact\002-call.png"      alt="Phone">
-            <img src="images\contact\004-chat.png"      alt="Text">
-            <img src="images\contact\003-letter.png"    alt="Email">
-            <img src="images\contact\001-pin.png"       alt="Work location">
-            <img src="images\contact\006-web.png"       alt="Website">
+            <a href="tel:7026596499">
+                <img src="images\contact\002-call.png"      alt="Phone">
+            </a>
+            <a href="">
+                <img src="images\contact\004-chat.png"      alt="Text">
+            </a>
+            <a href="">
+                <img src="images\contact\003-letter.png"    alt="Email">
+            </a>
+            <a href="">
+                <img src="images\contact\001-pin.png"       alt="Work location">
+            </a>
+            <a href="">
+                <img src="images\contact\006-web.png"       alt="Website">
+            </a>
         </div>
         <div class="addme">
-            <img src="images\contact\005-add-contact.png"   alt="Add contact">
+            <a href="">
+                <img src="images\contact\005-add-contact.png"   alt="Add contact">
+            </a>
         </div>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
         <script src="//code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
