--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -31,10 +31,10 @@
             <a href="">
                 <img src="images\contact\004-chat.png"      alt="Text">
             </a>
-            <a href="">
+            <a href="mailto:snell.dallin@gmail.com">
                 <img src="images\contact\003-letter.png"    alt="Email">
             </a>
-            <a href="">
+            <a href="maps.apple.com/address=1500+E+Medical+Center+Drive,Ann+Arbor,Michigan">
                 <img src="images\contact\001-pin.png"       alt="Work location">
             </a>
             <a href="">
