--- a/digitalcard/index.html
+++ b/digitalcard/index.html
@@ -28,13 +28,13 @@
             <a href="tel:7026596499">
                 <img src="images\contact\002-call.png"      alt="Phone">
             </a>
-            <a href="">
+            <a href="sms:7026596499">
                 <img src="images\contact\004-chat.png"      alt="Text">
             </a>
             <a href="mailto:snell.dallin@gmail.com">
                 <img src="images\contact\003-letter.png"    alt="Email">
             </a>
-            <a href="https://maps.apple.com/address=1500+E+Medical+Center+Drive,Ann+Arbor,Michigan">
+            <a href="maps:address=1500+E+Medical+Center+Drive,Ann+Arbor,Michigan">
                 <img src="images\contact\001-pin.png"       alt="Work location">
             </a>
             <a href="">
